Adjusted README, added text-shadow effect

--- a/batrider-obs-scoretable/index.html
+++ b/batrider-obs-scoretable/index.html
@@ -53,6 +53,8 @@ Main Functions                -   S.2.3
         overflow: hidden;
         margin: 0px;
         padding: 0px;
+
+        text-shadow: 0 0 10px black;
       }
 
       .contentWrapper{
